--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:palette-v7:+'
     compile 'com.android.support:support-v4:+'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.github.brnunes:swipeablerecyclerview:1.0.0'
 }
